syntax = "proto3";
package Proto.Lego.Tests.Aggregates;
option csharp_namespace = "Proto.Lego.Tests.Aggregates";

message TestAction{
	string string_to_save = 1;
	bool result_to_return = 2;
}

//State

message TestAggregateState {
	string saved_string = 1;
	int32 operations_performed = 2;
}