syntax = "proto3";
package Proto.Lego.Tests.Workflows;
option csharp_namespace = "Proto.Lego.Tests.Workflows";

message TestWorkflowInput {
	string aggregate_one_id = 1;
	string aggregate_two_id = 2;
	string string_to_save = 3;
	bool result_to_return_one = 4;
	bool result_to_return_two = 5;
}